--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    // sliders
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 
